--- a/capture.html
+++ b/capture.html
@@ -4,71 +4,114 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Math Mandala Capture</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #f0f2f6;
-      color: #31333f;
+      font-family: 'Inter', sans-serif;
+      background-color: #f7f9fb;
+      color: #333;
       display: flex;
       flex-direction: column;
       align-items: center;
       padding: 2rem;
     }
+
     h1 {
-      color: #4a4a4a;
+      margin-bottom: 1.5rem;
+      color: #444;
     }
+
+    .form-row {
+      display: flex;
+      gap: 1rem;
+      margin-bottom: 1.5rem;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+
     .input-group {
-      margin-bottom: 1rem;
-      width: 100%;
-      max-width: 400px;
+      display: flex;
+      flex-direction: column;
     }
+
     label {
-      display: block;
-      margin-bottom: 0.5rem;
+      margin-bottom: 0.3rem;
+      font-weight: 600;
     }
-    input, select, button {
-      width: 100%;
-      padding: 0.75rem;
-      border: 1px solid #ccc;
-      border-radius: 0.5rem;
+
+    input, select {
+      padding: 0.5rem 0.8rem;
       font-size: 1rem;
-    }
-    video, canvas {
-      margin-top: 1rem;
       border: 1px solid #ccc;
       border-radius: 0.5rem;
-      max-width: 100%;
+      width: 16rem;
     }
-    #capture-button {
+
+    button {
+      margin-top: 1rem;
+      padding: 0.7rem 1.2rem;
+      font-size: 1rem;
       background-color: #ff4b4b;
       color: white;
       border: none;
+      border-radius: 0.5rem;
       cursor: pointer;
     }
-    #capture-button:hover {
-      background-color: #e04343;
+
+    button:hover {
+      background-color: #e13c3c;
+    }
+
+    .preview-row {
+      display: flex;
+      gap: 1.5rem;
+      margin-top: 1.5rem;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+
+    video, canvas {
+      border: 1px solid #ccc;
+      border-radius: 0.5rem;
+      max-width: 100%;
+      width: 300px;
+      height: auto;
+    }
+
+    #message {
+      margin-top: 1rem;
+      font-weight: 500;
     }
   </style>
 </head>
 <body>
   <h1>📸 Math Mandala Capture</h1>
-  <div class="input-group">
-    <label for="email">Student Email:</label>
-    <input type="email" id="email" placeholder="Enter your email" required />
+
+  <div class="form-row">
+    <div class="input-group">
+      <label for="email">Student Email</label>
+      <input type="email" id="email" placeholder="Enter email" required />
+    </div>
+    <div class="input-group">
+      <label for="camera">Select Camera</label>
+      <select id="camera"></select>
+    </div>
   </div>
-  <div class="input-group">
-    <label for="camera">Select Camera:</label>
-    <select id="camera"></select>
+
+  <button id="capture-button">📷 Capture & Upload</button>
+  <div id="message"></div>
+
+  <div class="preview-row">
+    <video id="video" autoplay playsinline></video>
+    <canvas id="canvas"></canvas>
   </div>
-  <video id="video" autoplay playsinline></video>
-  <button id="capture-button">Capture Photo</button>
-  <canvas id="canvas" style="display:none;"></canvas>
 
   <script>
     const video = document.getElementById('video');
     const canvas = document.getElementById('canvas');
     const cameraSelect = document.getElementById('camera');
     const captureButton = document.getElementById('capture-button');
+    const message = document.getElementById('message');
     let currentStream;
 
     async function getCameras() {
@@ -88,9 +131,7 @@
         currentStream.getTracks().forEach(track => track.stop());
       }
       const constraints = {
-        video: {
-          deviceId: { exact: deviceId }
-        }
+        video: { deviceId: { exact: deviceId } }
       };
       currentStream = await navigator.mediaDevices.getUserMedia(constraints);
       video.srcObject = currentStream;
@@ -100,15 +141,44 @@
       startCamera(cameraSelect.value);
     });
 
-    captureButton.addEventListener('click', () => {
+    captureButton.addEventListener('click', async () => {
+      const email = document.getElementById("email").value.trim();
+      if (!email) {
+        message.textContent = "❌ Please enter a valid email.";
+        return;
+      }
+
+      // Capture frame to canvas
       canvas.width = video.videoWidth;
       canvas.height = video.videoHeight;
       canvas.getContext('2d').drawImage(video, 0, 0);
-      canvas.style.display = 'block';
-      // You can add code here to send the image to your server
+
+      // Convert canvas to blob
+      canvas.toBlob(async (blob) => {
+        const now = new Date().toISOString().replace(/[:.]/g, "-");
+        const filename = `mathmandala_${email}_${now}.jpg`;
+
+        const formData = new FormData();
+        formData.append("file", blob, filename);
+        formData.append("name", email);
+
+        message.textContent = "⏳ Uploading...";
+        try {
+          const response = await fetch("https://mathmandala-upload.onrender.com/upload", {
+            method: "POST",
+            body: formData
+          });
+          if (response.ok) {
+            message.textContent = "✅ Uploaded successfully!";
+          } else {
+            message.textContent = "❌ Upload failed.";
+          }
+        } catch (error) {
+          message.textContent = "❌ Error sending to server.";
+        }
+      }, "image/jpeg");
     });
 
-    // Initialize
     getCameras().then(() => {
       if (cameraSelect.options.length > 0) {
         startCamera(cameraSelect.value);
