--- a/capture.html
+++ b/capture.html
@@ -74,7 +74,7 @@
       border: 1px solid #ccc;
       border-radius: 0.5rem;
       max-width: 100%;
-      width: 600px;
+      width: 550px;
       height: auto;
     }
 
@@ -112,7 +112,7 @@
   let canvas;
   let nameInput = document.getElementById("name");
   let message = document.getElementById("message");
-  let uploadBtn = document.getElementById("uploadBtn");
+  let uploadBtn = document.getElementById("capture-button");
 
   async function initCamera() {
     const deviceId = document.getElementById("camera").value;
