--- a/capture.html
+++ b/capture.html
@@ -89,8 +89,8 @@
 
   <div class="form-row">
     <div class="input-group">
-      <label for="email">Student Email</label>
-      <input type="email" id="email" placeholder="Enter email" required />
+      <label for="email">Student Name</label>
+      <input type="email" id="email" placeholder="Enter name" required />
     </div>
     <div class="input-group">
       <label for="camera">Select Camera</label>
